--- a/src/todo.css
+++ b/src/todo.css
@@ -1,6 +1,7 @@
 *{
     margin: 0 !important;
     padding: 0 !important;
+    box-sizing: border-box;
 }
 
 .second-div{
@@ -125,3 +126,54 @@ background-color: red;
     gap: 8px;
     margin: 10px;
   }
+
+
+
+  /* Form.js */
+
+  body {
+    font-family: sans-serif;
+    margin: 20px;
+    padding: 0;
+  }
+  
+  h1 {
+    margin-top: 0;
+    font-size: 22px;
+  }
+  
+  h2 {
+    margin-top: 0;
+    font-size: 20px;
+  }
+  
+  h3 {
+    margin-top: 0;
+    font-size: 18px;
+  }
+  
+  h4 {
+    margin-top: 0;
+    font-size: 16px;
+  }
+  
+  h5 {
+    margin-top: 0;
+    font-size: 14px;
+  }
+  
+  h6 {
+    margin-top: 0;
+    font-size: 12px;
+  }
+  
+  code {
+    font-size: 1.2em;
+  }
+  
+  ul {
+    padding-left: 20px;
+  }
+  
+  .Error { color: red; }
+  
